--- a/index.html
+++ b/index.html
@@ -9,5 +9,16 @@
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
-  <body></body>
+  <body>
+    <div class="page">
+      <div class="header"></div>
+      <main class="content">
+        <section class="recipes"></section>
+        <section class="reservation"></section>
+        <section class="menu"></section>
+        <section class="about"></section>
+      </main>
+      <footer class="footer"></footer>
+    </div>
+  </body>
 </html>
