--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="page">
-      <div class="header"></div>
+      <header class="header"></header>
       <main class="content">
         <section class="recipes"></section>
         <section class="reservation"></section>
