New update for my project

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Triple Espresso</title>
     <meta name="author" content="Khalil Keyes" />
+    <meta
+      name="description"
+      content="coffee shop with different types of coffee"
+    />
     <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
