--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="coffee shop with different types of coffee"
     />
+    <meta name="keywords" content="espresso, iced coffee" />
     <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
