--- a/index.html
+++ b/index.html
@@ -60,8 +60,12 @@
         <div class="header__footer">
           <div>
             <p class="header__paragraph">Hours:</p>
-            <p class="header__paragraph">Monday – Friday (10:00 – 19:00)</p>
-            <p class="header__paragraph">Saturday – Sunday (11:00 – 18:00)</p>
+            <p class="header__paragraph">
+              Monday &ndash; Friday (10:00 &ndash; 19:00)
+            </p>
+            <p class="header__paragraph">
+              Saturday &ndash; Sunday (11:00 &ndash; 18:00)
+            </p>
           </div>
           <p class="header__paragraph">
             200 Success Avenue, The Town of Triple Peaks
@@ -69,7 +73,13 @@
         </div>
       </header>
       <main class="content">
-        <section class="recipes"></section>
+        <section class="recipes">
+          <h2 class="recipes__title">Recipes</h2>
+          <p class="recipes__subtitle">
+            Check out some recipes we've collected for your home-brewing
+            convenience:
+          </p>
+        </section>
         <section class="reservation"></section>
         <section class="menu"></section>
         <section class="about"></section>
