--- a/index.html
+++ b/index.html
@@ -79,6 +79,34 @@
             Check out some recipes we've collected for your home-brewing
             convenience:
           </p>
+          <ul class="recipes__video">
+            <li>
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc?si=_RfBZRps9X_M5Vas"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+              <p class="recipes__video-caption">Aeropress recipe</p>
+            </li>
+            <li>
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/st571DYYTR8?si=iup63cEzCOU0eorV"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+              <p class="recipes__video-caption">French press recipe</p>
+            </li>
+          </ul>
         </section>
         <section class="reservation"></section>
         <section class="menu"></section>
