--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
           />
           <ul class="nav__links">
             <li>
-              <a class="nav__link" href="">Recipes</a>
+              <a href="#recipes" class="nav__link">Recipes</a>
             </li>
             <li>
-              <a class="nav__link" href="">Book a table</a>
+              <a href="#reservation" class="nav__link">Book a table</a>
             </li>
             <li>
-              <a class="nav__link" href="">Menu</a>
+              <a href="#menu" class="nav__link">Menu</a>
             </li>
             <li>
-              <a class="nav__link" href="">Contacts</a>
+              <a href="#footer" class="nav__link">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -79,7 +79,7 @@
             Check out some recipes we've collected for your home-brewing
             convenience:
           </p>
-          <ul class="recipes__video">
+          <ul class="recipes__videos">
             <li>
               <iframe
                 width="560"
@@ -91,7 +91,9 @@
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen
               ></iframe>
-              <p class="recipes__video-caption">Aeropress recipe</p>
+              <p class="recipes__video-caption">
+                <span>Aeropress recipe</span><span>~5 min</span>
+              </p>
             </li>
             <li>
               <iframe
@@ -104,15 +106,17 @@
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen
               ></iframe>
-              <p class="recipes__video-caption">French press recipe</p>
+              <p class="recipes__video-caption">
+                <span>French press recipe</span><span>~15 min</span>
+              </p>
             </li>
           </ul>
         </section>
-        <section class="reservation"></section>
-        <section class="menu"></section>
-        <section class="about"></section>
+        <section id="reservation" class="reservation"></section>
+        <section id="menu" class="menu"></section>
+        <section id="recipe" class="about"></section>
       </main>
-      <footer class="footer"></footer>
+      <footer id="footer" class="footer"></footer>
     </div>
   </body>
 </html>
