--- a/index.html
+++ b/index.html
@@ -82,11 +82,9 @@
           <ul class="recipes__videos">
             <li>
               <iframe
-                width="560"
-                height="315"
+                class="recipes__iframe"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc?si=_RfBZRps9X_M5Vas"
                 title="YouTube video player"
-                frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen
@@ -97,11 +95,9 @@
             </li>
             <li>
               <iframe
-                width="560"
-                height="315"
+                class="recipes__iframe"
                 src="https://www.youtube.com/embed/st571DYYTR8?si=iup63cEzCOU0eorV"
                 title="YouTube video player"
-                frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen
