--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
       </header>
       <main class="content">
-        <section class="recipes">
+        <section id="recipes" class="recipes">
           <h2 class="recipes__title">Recipes</h2>
           <p class="recipes__subtitle">
             Check out some recipes we've collected for your home-brewing
@@ -110,7 +110,7 @@
         </section>
         <section id="reservation" class="reservation"></section>
         <section id="menu" class="menu"></section>
-        <section id="recipe" class="about"></section>
+        <section class="about"></section>
       </main>
       <footer id="footer" class="footer"></footer>
     </div>
