--- a/index.html
+++ b/index.html
@@ -86,13 +86,14 @@
                 width="560"
                 height="315"
                 class="recipes__iframe"
-                >>>>>>> origin
                 src="https://www.youtube.com/embed/j6VlT_jUVPc?si=_RfBZRps9X_M5Vas"
-                title="YouTube video player" allow="accelerometer; autoplay;
+                title="YouTube video player"
+                allow="accelerometer; autoplay;
                 clipboard-write; encrypted-media; gyroscope; picture-in-picture;
-                web-share" referrerpolicy="strict-origin-when-cross-origin"
-                allowfullscreen ></iframe
-              >
+                web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
               <p class="recipes__video-caption">
                 <span>Aeropress recipe</span><span>~5 min</span>
               </p>
