--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
                 class="recipes__iframe"
                 width="560"
                 height="315"
-                class="recipes__iframe"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc?si=_RfBZRps9X_M5Vas"
                 title="YouTube video player"
                 allow="accelerometer; autoplay;
@@ -103,7 +102,6 @@
                 class="recipes__iframe"
                 width="560"
                 height="315"
-                class="recipes__iframe"
                 src="https://www.youtube.com/embed/st571DYYTR8?si=iup63cEzCOU0eorV"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -135,19 +133,19 @@
                 <input
                   class="form__input"
                   type="number"
-                  id="nummer-of-guests"
+                  id="number-of-guests"
                   placeholder="1-8"
                   min="1"
                   max="8"
                   required
                 />
               </label>
-              <label for="Date" class="form__label"
+              <label for="datetime-local" class="form__label"
                 >Date & time*
                 <input
                   class="form__input"
                   type="datetime-local"
-                  id="date"
+                  id="datetime-local"
                   required
                 />
               </label>
