--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@
               cups!
             </p>
             <div class="about__circle"></div>
+            <div class="about__circle about__circle_animation_blurred"></div>
           </div>
         </section>
       </main>
